# agentic_vs

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  cli.py  config.py  docker-compose.yml  main.py  main_legacy.py  pyproject.toml  requirements.txt  test_analysis_result.txt  test_calc.py  test_cors.py  test_ddg.py  test_multiagent.py  test_read_result.txt  tui.py
.claude/: settings.local.json
.github/workflows/: ci.yml  desktop.yml  shadowdev.yml
agent/: advisor.py  auto_dream.py  context_providers.py  graph.py  headless.py  hooks.py  mcp_client.py  model_aware.py  nodes.py  notifications.py  permissions.py  plugin_registry.py  rules_loader.py  sandbox.py  session_store.py  skill_engine.py  skill_hub.py  skill_loader.py  snapshots.py  subagents.py  undercover.py  worktree.py
agent/constants/: __init__.py  errors.py
agent/plugins/: __init__.py  auditor.py  hub_scout.py  installer.py  manager.py  registry_db.py  sandbox.py  types.py
agent/team/: __init__.py  coordinator.py  improvement_loop.py  orchestrator.py  plugin_quality.py  prompt_intel.py  quality_intel.py  review_loop.py  scratchpad.py  tools.py  worker_pool.py
agent/tools/: agent_summary.py  ast_parser.py  brief.py  chunk_reader.py  code_analyzer.py  code_quality.py  code_search.py  communication.py  config_tool.py  context_build.py  context_hub.py  cost_tracker.py  cron.py  dep_graph.py  diagnostics.py  file_ops.py  git.py  github.py  gitlab.py  handoff.py  image_input.py  lsp.py  lsp_tools.py  memory.py  notebook.py  plan.py  question.py  semantic.py  session_tools.py  skills.py  snapshot_tools.py  terminal.py  test_runner.py  todo.py  utils.py  (+5 more)
benchmarks/: README.md  run_benchmark.py
desktop/: electron.js  package.json  preload.js
docs/: api-reference.md  architecture.md  ci-headless.md  configuration.md  getting-started.md  hooks-guide.md  index.md  mcp-guide.md  security.md  skills-guide.md  tools-reference.md
frontend/: errors.json  next.config.ts  package-lock.json  package.json
indexer/: __init__.py  chroma_indexer.py  code_indexer.py
ink-cli/: package-lock.json  package.json  tsconfig.json
mcp-servers/: README.md  brave-search.json  context-hub.json  everything.json  fetch.json  filesystem.json  github.json  memory.json  postgres.json  puppeteer.json  slack.json  sqlite.json
models/: schemas.py  state.py  tool_schemas.py
server/: grpc_server.py  main.py
shadowdev/: plugin_host.py
skills/: code-review.md  commit.md  refactor.md  security-audit.md
static/: app.js  index.html  style.css
tests/: conftest.py  test_advisor.py  test_agent_summary.py  test_auto_dream.py  test_brief.py  test_cli_ux.py  test_code_quality.py  test_code_search.py  test_compaction.py  test_compaction_improvements.py  test_config_tool.py  test_context_build.py  test_context_hub.py  test_context_providers.py  test_cron.py  test_diagnostics.py  test_errors.py  test_file_ops.py  test_git.py  test_github.py  test_gitlab.py  test_graph_imports.py  test_headless.py  test_hooks.py  test_hooks_lifecycle.py  test_image_input.py  test_markdown_streaming.py  test_mcp_client.py  test_memory.py  test_model_aware.py  test_parallel_tools.py  test_path_utils.py  test_permissions.py  test_plugin_registry.py  test_rules.py  test_rules_loader.py  test_sandbox.py  test_session_fork.py  test_session_store.py  test_skill_engine.py  (+12 more)
(+95 files in other folders)
